# xyz-launchpad-kit

./: .gitignore  API-REFERENCE.md  README.md
contracts/amm/: Cargo.toml  xyz_amm_optimized.wasm
contracts/amm/.cargo/: config.toml
contracts/amm/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/launchpad/: Cargo.toml  xyz_launchpad_optimized.wasm
contracts/launchpad/.cargo/: config.toml
contracts/launchpad/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
frontend/: .gitignore  env.example  next.config.ts  package-lock.json  package.json  xyz-chain-sdk-0.1.0.tgz
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: providers.tsx  welcome-modal.tsx
frontend/src/hooks/: use-candles.ts  use-curve-progress.ts  use-recent-trades.ts  use-sse.ts  use-token-detail.ts  use-token-holders.ts  use-token-trades.ts  use-tokens.ts  use-xyz-price.ts
frontend/src/lib/: api.ts  chain-config.ts  indicators.ts  sse-types.ts  utils.ts
frontend/src/stores/: wallet-store.ts
scripts/: deploy-amm.sh  deploy-cw20.sh
sdk/: README.md  package-lock.json  package.json  tsconfig.json  xyz-chain-sdk-0.1.0.tgz
sdk/examples/node-script/: README.md  decrypt-wallets.ts  generate-wallets.ts  index.ts  package-lock.json  package.json
sdk/examples/react-app/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sdk/src/: client.test.ts  client.ts  index.ts
sdk/src/contracts/: cw20.ts  execute.ts  index.ts  query.ts
sdk/src/queries/: balance.test.ts  balance.ts  index.ts  token.test.ts  token.ts
(+80 files in other folders)
