[package]
name = "xyz-amm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
cosmwasm-std = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.16"
cw2 = "0.16"
cw20 = "0.16"
thiserror = "1.0"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
panic = "abort"
